[build-system]
requires = ["setuptools>=65.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch1337"
description = "Patches files using .1337 patch files"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["1337", "patch"]
authors = [{ name = "OMEGA_RAZER" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.scripts]
patch1337 = "patch1337.patch1337:main"

[project.urls]
"Homepage" = "https://omegarazer.github.io/patch1337"
"Source" = "https://github.com/OMEGARAZER/patch1337"
"Bug Reports" = "https://github.com/OMEGARAZER/patch1337/issues"
